--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@penguintop/pen-dashboard",
-  "version": "0.5.0",
+  "version": "0.0.1",
   "description": "An app which helps users to setup their Pen node and do actions like cash out cheques",
   "keywords": [
     "pen",
@@ -119,6 +119,6 @@
   "engines": {
     "node": ">=12.0.0",
     "npm": ">=6.0.0",
-    "bee": ">=0.0.1"
+    "pen": ">=0.0.1"
   }
 }
