--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,9 @@
 DISABLE_ESLINT_PLUGIN=true
 
 
-REACT_APP_BEE_HOST=http://127.0.0.1:1633
-REACT_APP_BEE_DEBUG_HOST=http://127.0.0.1:1635
-REACT_APP_BEE_DOCS_HOST=https://docs.ethswarm.org/docs/
-REACT_APP_BEE_DISCORD_HOST=https://discord.gg/eKr9XPv7
+REACT_APP_PEN_HOST=http://127.0.0.1:1633
+REACT_APP_PEN_DEBUG_HOST=http://127.0.0.1:1635
+REACT_APP_PEN_DOCS_HOST=https://www.whitecoin.info
+REACT_APP_PEN_DISCORD_HOST=https://discord.com/invite/XRzCzKd9w3
 REACT_APP_BLOCKCHAIN_EXPLORER_URL=https://explorer.whitecoin.info
-REACT_APP_BEE_GITHUB_REPO_URL=https://api.github.com/repos/penguintop/penguin
+REACT_APP_PEN_GITHUB_REPO_URL=https://api.github.com/repos/penguintop/penguin
